--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,9 @@ edition = "2018"
 [dependencies]
 # argparse = "0.2.2"
 clap = "2.33.3"
+edit = "0.1.2"
 git2 = "0.13"
 home = "0.5.3"
 predicates = "1.0.5"
 symlink = "0.1.0"
+tempfile = "3.1.0"
